--- a/level-02/backend/.eslintrc.json
+++ b/level-02/backend/.eslintrc.json
@@ -12,6 +12,7 @@
   },
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
+    "class-methods-use-this": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
