--- a/level-02/backend/.eslintrc.json
+++ b/level-02/backend/.eslintrc.json
@@ -3,14 +3,21 @@
     "es2020": true,
     "node": true
   },
-  "extends": ["airbnb-base", "plugin:@typescript-eslint/recommended","prettier/@typescript-eslint",
-    "plugin:prettier/recommended"],
+  "extends": [
+    "airbnb-base",
+    "prettier/@typescript-eslint",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended"
+  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": [
+    "@typescript-eslint",
+    "prettier"
+  ],
   "rules": {
     "class-methods-use-this": "off",
     "import/extensions": [
