--- a/level-02/backend/.eslintrc.json
+++ b/level-02/backend/.eslintrc.json
@@ -20,6 +20,14 @@
   ],
   "rules": {
     "class-methods-use-this": "off",
+    "no-underscore-dangle": "off",
+    "@typescript-eslint/camelcase": "off",
+    "@typescript-eslint/interface-name-prefix": [
+      "error",
+      {
+        "prefixWithI": "always"
+      }
+    ],
     "import/extensions": [
       "error",
       "ignorePackages",
