--- a/level-02/backend/package.json
+++ b/level-02/backend/package.json
@@ -38,6 +38,7 @@
     "prettier": "^2.2.1",
     "ts-node-dev": "^1.0.0",
     "tsconfig-paths": "^3.9.0",
+    "tsyringe": "^4.4.0",
     "typescript": "^4.1.2"
   }
 }
